Second Commit, Fixed Layout Issues

--- a/app.css
+++ b/app.css
@@ -24,7 +24,7 @@ body {
 }
 
 .container {
-      margin: 50px auto;
+      margin: 51px auto;
       background-color: hsl(217, 54%, 11%);
       width:375px;
       height:auto;
